# simdscan

./: .cproject  .project  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  main.cpp  parallel_bp.cpp  parallel_delta.cpp  parallel_rle.cpp  perf_bp.cpp  perf_delta.cpp  perf_parallel.cpp  perf_rle.cpp  perf_uload.cpp
src/decode/: BPDecoder.cpp  BPDecoder.h  Decoder.cpp  Decoder.h  DeltaDecoder.cpp  DeltaDecoder.h
src/encode/: encode.cpp
src/jni/: CMakeLists.txt  SimdScanner.cpp  edu_uchicago_cs_db_sboost_SimdScanner.h  edu_uchicago_cs_encsel_query_simdscan_SimdScanner.h
src/predicate/: Predicate.cpp  Predicate.h
src/scan/: BitWeaverHScanner128.cpp  BitWeaverHScanner128.h  BitWeaverHScanner256.cpp  BitWeaverHScanner256.h  BitWeaverHScanner512.cpp  BitWeaverHScanner512.h  HaoScanner.cpp  HaoScanner.h  HaoScanner128.cpp  HaoScanner128.h  HaoScanner256.cpp  HaoScanner256.h  HaoScanner512.cpp  HaoScanner512.h  ParallelScanner.cpp  ParallelScanner.h  Scanner.cpp  Scanner.h  WillhalmScanner.cpp  WillhalmScanner.h  WillhalmScanner128.cpp  WillhalmScanner128.h  WillhalmScanner256.cpp  WillhalmScanner256.h
src/scan/bitpack/: BitWeaverHScanner128.cpp  BitWeaverHScanner128.h  BitWeaverHScanner256.cpp  BitWeaverHScanner256.h  BitWeaverHScanner512.cpp  BitWeaverHScanner512.h  HaoLaneLoaderScanner.cpp  HaoLaneLoaderScanner.h  HaoScanner128.cpp  HaoScanner128.h  HaoScanner256.cpp  HaoScanner256.h  HaoScanner512.cpp  HaoScanner512.h  TrivialBPScanner.cpp  TrivialBPScanner.h  WillhalmScanner128.cpp  WillhalmScanner128.h  WillhalmScanner256.cpp  WillhalmScanner256.h  WillhalmUnpackerScanner.cpp  WillhalmUnpackerScanner.h
src/scan/delta/: LemireDeltaScanner.cpp  LemireDeltaScanner.h  ParallelDeltaScanner.cpp  ParallelDeltaScanner.h  SimdDeltaScanner.cpp  SimdDeltaScanner.h  SimdDeltaScanner128.cpp  SimdDeltaScanner128.h  SimdDeltaScanner16.cpp  SimdDeltaScanner16.h  SimdDeltaScanner256.cpp  SimdDeltaScanner256.h  SimdDeltaScanner32.cpp  SimdDeltaScanner32.h  TrivialDeltaScanner.cpp  TrivialDeltaScanner.h
src/scan/dict/: TrivialDictScanner.cpp  TrivialDictScanner.h
src/scan/rle/: LaneLoaderRLEScanner.cpp  LaneLoaderRLEScanner.h  SIMDRLEScanner.cpp  SIMDRLEScanner.h  SimdRLEScanner.cpp  SimdRLEScanner.h  TrivialRLEScanner.cpp  TrivialRLEScanner.h
src/util/: encode.cpp  encode.h  math.cpp  math_util.cpp  math_util.h  template.cpp  template.h
src/util/ll/: LaneLoader.cpp  LaneLoader.h  LaneLoader64.cpp  LaneLoader64.h
src/util/unpack/: Large16Unpacker.cpp  Large16Unpacker.h  Large32Unpacker.cpp  Large32Unpacker.h  Small16Unpacker.cpp  Small16Unpacker.h  Small32Unpacker.cpp  Small32Unpacker.h  TrivialUnpacker.cpp  TrivialUnpacker.h  Unpacker.cpp  Unpacker.h
src/util/unpack/u128/: LargeUnpacker128.h  SmallUnpacker128.cpp  Unpacker128.cpp  Unpacker128.h
src/util/unpack/u256/: Large16Unpacker.cpp  Large32Unpacker.h  Small32Unpacker.cpp  Unpacker.h
src/util/unpack128/: LargeUnpacker128.cpp  SmallUnpacker128.h
test/: CMakeLists.txt
test/predicate/: Predicate_test.cpp
test/scan/: BitWeaverHScanner128_test.cpp  HaoScanner128_test.cpp  HaoScanner256_test.cpp  HaoScanner_test.cpp  WillhalmScanner128_test.cpp  WillhalmScanner256_test.cpp
test/scan/bitpack/: BitWeaverHScanner128_test.cpp  BitWeaverHScanner_test.cpp  HaoScanner128_test.cpp  HaoScanner256_test.cpp  HaoScanner512_test.cpp  WillhalmScanner128_test.cpp  WillhalmScanner256_test.cpp  WillhalmUnpackerScannerTest.cpp  WillhalmUnpackerScanner_test.cpp
test/scan/delta/: SimdDeltaScanner16ForTest.cpp  SimdDeltaScanner16ForTest.h  SimdDeltaScanner16_test.cpp  SimdDeltaScanner32ForTest.cpp  SimdDeltaScanner32ForTest.h  SimdDeltaScanner32_test.cpp
test/scan/rle/: SimdRLEScanner_test.cpp  TrivialRLEScanner_test.cpp
test/util/: LaneLoader_test.cpp  Unpacker256_test.cpp  encode_test.cpp  math_test.cpp
test/util/unpack/: Small16Unpacker_test.cpp  Unpacker_test.cpp
